--- a/frontend-web/webclient/app/UserSettings/KnownOrgs.json
+++ b/frontend-web/webclient/app/UserSettings/KnownOrgs.json
@@ -57,7 +57,7 @@
     {
         "key": "University of the Faroe Islands",
         "value": "University of the Faroe Islands",
-        "tags": "setuf setur.fo"
+        "tags": "setur.fo"
     },
     {
         "key": "University College South Denmark",
