Core2: Several bug-fixes

--- a/core2/Dockerfile
+++ b/core2/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:24.04
 RUN apt-get update && \
-    apt-get install -y ca-certificates && \
+    apt-get install -y ca-certificates vim && \
     update-ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
