--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -1,6 +1,5 @@
-{
-    "name": "ucloud",
-    "version": "2025.4.124",
+{ "name": "ucloud",
+    "version": "2025.4.142",
     "description": "UCloud",
     "type": "module",
     "author": "IMADA - eScience Center, SDU",
