--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -1,4 +1,5 @@
-{ "name": "ucloud",
+{
+    "name": "ucloud",
     "version": "2025.4.150",
     "description": "UCloud",
     "type": "module",
@@ -24,7 +25,7 @@
     "dependencies": {
         "@novnc/novnc": "1.5.0",
         "@observablehq/plot": "0.6.17",
-        "@reduxjs/toolkit": "2.9.2",
+        "@reduxjs/toolkit": "2.11.2",
         "@svgr/cli": "8.1.0",
         "apexcharts": "4.7.0",
         "assert": "2.1.0",
@@ -46,10 +47,10 @@
         "mermaid": "11.12.2",
         "monaco-editor": "0.55.1",
         "monaco-vim": "0.4.2",
-        "react": "19.2.1",
+        "react": "19.2.3",
         "react-apexcharts": "1.8.0",
-        "react-datepicker": "8.10.0",
-        "react-dom": "19.2.1",
+        "react-datepicker": "9.0.0",
+        "react-dom": "19.2.3",
         "react-markdown": "10.1.0",
         "react-modal": "3.16.3",
         "react-redux": "9.2.0",
@@ -83,9 +84,9 @@
         "@types/rusha": "0.8.3",
         "@types/styled-system": "5.1.25",
         "@types/ua-parser-js": "0.7.39",
-        "@vitejs/plugin-react": "5.1.1",
+        "@vitejs/plugin-react": "5.1.2",
         "@vitejs/plugin-react-refresh": "1.3.6",
         "typescript": "5.9.3",
-        "vite": "7.2.7"
+        "vite": "7.3.0"
     }
 }
