--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -29,11 +29,11 @@ jobs:
           check-latest: true
           cache: true
 
-      - name: Set up Node.js (LTS)
-        uses: actions/setup-node@v4
-        with:
-          node-version: "lts/*"
-          cache: "npm"
+#      - name: Set up Node.js (LTS)
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: "lts/*"
+#          cache: "npm"
 
       - name: Verify toolchain
         run: |
