--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -29,12 +29,6 @@ jobs:
           check-latest: true
           cache: true
 
-#      - name: Set up Node.js (LTS)
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: "lts/*"
-#          cache: "npm"
-
       - name: Verify toolchain
         run: |
           go version
@@ -54,11 +48,13 @@ jobs:
           set -euo pipefail
           ./launcher-dev test
 
-      - name: Upload test artifacts from /tmp/test-artifacts
+      - name: Upload test artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-artifacts-${{ github.run_id }}-${{ github.run_attempt }}
-          path: frontend-web/webclient/playwright-report
+          path: |
+            frontend-web/webclient/playwright-report
+            .compose/*-logs/*
           if-no-files-found: warn
           retention-days: 14
