--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -48,6 +48,10 @@ jobs:
           set -euo pipefail
           ./launcher-dev test
 
+      - name: Fix log permissions
+        if: always()
+        run: sudo chown -R $USER:$USER .compose/*-logs
+
       - name: Upload test artifacts
         if: always()
         uses: actions/upload-artifact@v4
