E2E: Log tweak (please work)

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -52,6 +52,7 @@ jobs:
         if: always()
         run: |
           sudo chown -R $USER:$USER .compose/*-logs
+          sudo chown -R $USER:$USER .compose/k8s-storage/home/*
 
       - name: Upload test artifacts
         if: always()
