--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -17,6 +17,8 @@ jobs:
     timeout-minutes: 60
 
     steps:
+      # This step takes a considerable amount of time, but is required to ensure we don't run out of space (due to the
+      # big container images we need)
       - name: Disk cleanup
         run: |
           sudo rm -rf /usr/lib/jvm
@@ -36,13 +38,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.24.x"
-          check-latest: true
-          cache: true
 
       - name: Verify toolchain
         run: |
