--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,7 +1,6 @@
 name: E2E test
 
 on:
-  pull_request:
   workflow_dispatch:
   push:
     branches:
@@ -13,38 +12,14 @@ permissions:
 jobs:
   test:
     name: Run launcher tests
-    runs-on: ubuntu-24.04
+    runs-on: self-hosted
     timeout-minutes: 60
 
     steps:
-      # This step takes a considerable amount of time, but is required to ensure we don't run out of space (due to the
-      # big container images we need)
-      - name: Disk cleanup
-        run: |
-          sudo rm -rf /usr/lib/jvm
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /usr/share/swift
-          sudo rm -rf /usr/local/.ghcup
-          sudo rm -rf /usr/local/julia*
-          sudo rm -rf /usr/local/lib/android
-          sudo rm -rf /opt/az
-          sudo rm -rf /usr/local/share/powershell
-          sudo rm -rf /opt/hostedtoolcache
-          docker system prune -af || true
-          docker builder prune -af || true
-          df -h
-
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.24.x"
-          check-latest: true
-          cache: true
 
       - name: Verify toolchain
         run: |
@@ -58,6 +33,11 @@ jobs:
         run: |
           set -euo pipefail
           ./launcher-dev init-test
+
+      - name: Remove unused docker resources
+        shell: bash
+        run: |
+          docker system prune --all --volumes --force
 
       - name: Run test
         shell: bash
