Syncthing test Some accounting work

--- a/frontend-web/webclient/tsconfig.json
+++ b/frontend-web/webclient/tsconfig.json
@@ -9,7 +9,7 @@
         "allowSyntheticDefaultImports": true,
         "allowUnreachableCode": false,
         "noFallthroughCasesInSwitch": true,
-        "allowUnusedLabels": true,
+        "allowUnusedLabels": false,
         "module": "esnext",
         "lib": [
             "ESNext",
