Launcher: Add publicLinks to default configuration

--- a/launcher-tool-go/pkg/launcher2/config/k8s/config.yaml
+++ b/launcher-tool-go/pkg/launcher2/config/k8s/config.yaml
@@ -41,6 +41,11 @@ services:
       prefix: "k8s-"
       suffix: ".localhost.direct"
 
+    publicLinks:
+      enabled: true
+      prefix: "k8s-"
+      suffix: ".localhost.direct"
+
     publicIps:
       enabled: true
 
