--- a/frontend-web/Dockerfile
+++ b/frontend-web/Dockerfile
@@ -1,5 +1,9 @@
-FROM eclipse-temurin:20-jdk-jammy
-USER 0
-COPY ./webclient/dist /var/www/
-COPY ./webserver/build/service/ /opt/service
-CMD ["/opt/service/bin/service", "--config-dir", "/etc/service"]
+FROM caddy:2.11-alpine
+
+ARG APP_VERSION=""
+ENV APP_VERSION=${APP_VERSION}
+
+COPY ./Caddyfile /etc/caddy/Caddyfile
+COPY ./webclient/dist /usr/share/caddy
+
+EXPOSE 8080
