Ignore changes to 'OTHER_test_data.json'

--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,5 @@ syncfiles/
 .use-core2
 .use-core2-exp
 frontend-web/webclient/tests/test_data.json
+frontend-web/webclient/tests/OTHER_test_data.json
 .use-ollama
