finished provider notification

--- a/core2/pkg/foundation/policies/restrict_integrated_applications.yaml
+++ b/core2/pkg/foundation/policies/restrict_integrated_applications.yaml
@@ -16,7 +16,7 @@ configuration:
         checked then all integrated applications can be run and the
         allow-list is ignored.
     - name: "allowList"
-      type: TextList
+      type: EnumSet
       title: "Allow-list"
       description: >
         List of applications which are explicitly allowed.
