IM2: Initial VM agent and better error handling

--- a/provider-integration/im2/Dockerfile
+++ b/provider-integration/im2/Dockerfile
@@ -13,6 +13,10 @@ COPY bin/ucmetrics_aarch64 /usr/bin/tmp_ucmetrics_aarch64
 COPY bin/ucviz_aarch64 /usr/bin/tmp_ucviz_aarch64
 COPY bin/ucviz_x86_64 /usr/bin/tmp_ucviz_x86_64
 
+COPY bin/vmagent_aarch64 /usr/bin/tmp_vmagent_aarch64
+COPY bin/vmagent_x86_64 /usr/bin/tmp_vmagent_x86_64
+
 RUN mv /usr/bin/tmp_ucloud_`uname -m` /usr/bin/ucloud && rm /usr/bin/tmp_ucloud*
 RUN mv /usr/bin/tmp_ucmetrics_`uname -m` /usr/bin/ucmetrics && rm /usr/bin/tmp_ucmetrics*
 RUN mv /usr/bin/tmp_ucviz_`uname -m` /usr/bin/ucviz && rm /usr/bin/tmp_ucviz*
+RUN mv /usr/bin/tmp_vmagent_`uname -m` /usr/bin/vmagent && rm /usr/bin/tmp_vmagent*
